make dealer smarter

--- a/index.html
+++ b/index.html
@@ -24,17 +24,18 @@
                 <div id="your-cards"></div>
             </div>
         </div>
-        <div class="button_result">
-            <button id="hit">Hit</button>
-            <button id="stay">Stay</button>
-            <p id="results"></p>
-        </div>
-        <div class="chips_container">
-            <img src="images/chip_100.png" alt="chips"  id="chip_100">
-            <p id="credits"></p>
-        </div>
-        <div class="footer">
-            <p class="made_by">made by Suteng(Steven) Chen</p>
+        <div class="botton">
+            <div class="chips_container">
+                <p id="credits" class="money"></p>
+            </div>
+            <div class="button_result">
+                <p id="results"></p>
+                <button id="hit">Hit</button>
+                <button id="stay">Stay</button>
+            </div>
+            <div class="footer">
+                <p class="made_by">made by Suteng(Steven) Chen</p>
+            </div>
         </div>
     </body>
 </html>
