Adding some new features

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Black Jack</title>
+        <title>Blackjack</title>
         <link rel="stylesheet" href="blackjack.css">
         <script src="blackjack.js"></script>
     </head>
@@ -24,7 +24,7 @@
                 <div id="your-cards"></div>
             </div>
         </div>
-        <div class="botton">
+        <div class="button">
             <div class="chips_container">
                 <p id="credits" class="money"></p>
             </div>
@@ -32,6 +32,7 @@
                 <p id="results"></p>
                 <button id="hit">Hit</button>
                 <button id="stay">Stay</button>
+                <button id="newGame">New Game</button>
             </div>
             <div class="footer">
                 <p class="made_by">made by Suteng(Steven) Chen</p>
